--- a/css/style2.css
+++ b/css/style2.css
@@ -168,7 +168,7 @@ form.sign-in-form {
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
-  background-image: linear-gradient(-45deg, #ff33bb 0%, #ecf9f2 100%);
+  background-image: linear-gradient(-45deg, #009933 0%,#79ff4d 100%);
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
